--- a/src/components/ProductContainer.css
+++ b/src/components/ProductContainer.css
@@ -1,4 +1,11 @@
+.ProductContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  list-style: none;
+}
+
 .ProductContainer .ProductCard img {
-  height: 400px;
-  width: 400px;
+  height: 200px;
+  width: 200px;
 }
