Working on cards/adding and removing functions

--- a/src/components/ProductCard.css
+++ b/src/components/ProductCard.css
@@ -6,3 +6,8 @@
 .ProductCard .cart-title {
   overflow-wrap: break-word;
 }
+
+.ProductCard .cart-operations img {
+  height: 30px;
+  width: 30px;
+}
